Mapper/src/main/java/gastmappers/liemapper/grammar/fodcatParser.java
// Generated from .\fodcat.g4 by ANTLR 4.8
package  gastmappers.liemapper.grammar;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class fodcatParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, PLUS=8, MINUS=9, 
		MULTIPLICATION=10, DIVISION=11, POWER=12, MODULE=13, ASSIGN_OP=14, PI=15, 
		EULER=16, GREATER=17, GREATEREQ=18, LESS=19, LESSEQ=20, EQUAL=21, DIFFERENT=22, 
		OR=23, AND=24, NOT=25, COMMA=26, COLON=27, WHILE=28, REPEAT=29, DO=30, 
		TIMES=31, BREAK=32, CONTINUE=33, IF=34, THEN=35, ELSE=36, FUNCTION_DEC=37, 
		MAIN_NAME=38, END=39, RETURN=40, PRINT=41, BUTTON=42, LED=43, PWMLED=44, 
		SERVO=45, SLEEP=46, PRESS=47, ON=48, OFF=49, BLINK=50, VALUE=51, MIN=52, 
		MID=53, MAX=54, ANGLE=55, IDENTIFIER=56, INTEGER=57, STRING=58, WS=59, 
		COMMENT=60, LINE_COMMENT=61;
	public static final int
		RULE_program = 0, RULE_main_function = 1, RULE_command = 2, RULE_ifstat = 3, 
		RULE_elsestat = 4, RULE_func_call = 5, RULE_flow_exp = 6, RULE_assignment = 7, 
		RULE_gpio = 8, RULE_sleep = 9, RULE_expression = 10, RULE_arithmetic_exp = 11, 
		RULE_relational_exp = 12, RULE_logic_exp = 13, RULE_array_call = 14, RULE_function_declaration = 15, 
		RULE_array_declaration = 16, RULE_gpio_declaration = 17, RULE_parameters_declaration = 18, 
		RULE_parameters_called = 19, RULE_int_literal = 20, RULE_bool_literal = 21, 
		RULE_float_literal = 22, RULE_strg = 23, RULE_constant = 24, RULE_relational_op = 25, 
		RULE_logic_op = 26, RULE_arithmetic_op = 27, RULE_print_op = 28, RULE_sign = 29, 
		RULE_func_button = 30, RULE_func_led = 31, RULE_func_servo = 32, RULE_identifier = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main_function", "command", "ifstat", "elsestat", "func_call", 
			"flow_exp", "assignment", "gpio", "sleep", "expression", "arithmetic_exp", 
			"relational_exp", "logic_exp", "array_call", "function_declaration", 
			"array_declaration", "gpio_declaration", "parameters_declaration", "parameters_called", 
			"int_literal", "bool_literal", "float_literal", "strg", "constant", "relational_op", 
			"logic_op", "arithmetic_op", "print_op", "sign", "func_button", "func_led", 
			"func_servo", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'.'", "'['", "']'", "'verdadero'", "'falso'", "'+'", 
			"'-'", "'*'", "'/'", "'**'", "'mod'", "':='", "'pi'", "'euler'", "'>'", 
			"'>='", "'<'", "'<='", null, null, null, null, null, "','", "':'", "'mientras'", 
			"'repetir'", "'haga'", "'veces'", "'finciclo'", "'continuar'", "'si'", 
			"'entonces'", "'sino'", "'para'", "'principal'", "'fin'", "'devolver'", 
			"'imprimir'", "'boton'", "'led'", "'regulable'", "'servo'", "'esperar'", 
			"'presionado'", "'encendido'", "'apagado'", "'parpadear'", "'brillo'", 
			"'minimo'", "'medio'", "'maximo'", "'angulo'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "PLUS", "MINUS", "MULTIPLICATION", 
			"DIVISION", "POWER", "MODULE", "ASSIGN_OP", "PI", "EULER", "GREATER", 
			"GREATEREQ", "LESS", "LESSEQ", "EQUAL", "DIFFERENT", "OR", "AND", "NOT", 
			"COMMA", "COLON", "WHILE", "REPEAT", "DO", "TIMES", "BREAK", "CONTINUE", 
			"IF", "THEN", "ELSE", "FUNCTION_DEC", "MAIN_NAME", "END", "RETURN", "PRINT", 
			"BUTTON", "LED", "PWMLED", "SERVO", "SLEEP", "PRESS", "ON", "OFF", "BLINK", 
			"VALUE", "MIN", "MID", "MAX", "ANGLE", "IDENTIFIER", "INTEGER", "STRING", 
			"WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "fodcat.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public fodcatParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Main_functionContext main_function() {
			return getRuleContext(Main_functionContext.class,0);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<Gpio_declarationContext> gpio_declaration() {
			return getRuleContexts(Gpio_declarationContext.class);
		}
		public Gpio_declarationContext gpio_declaration(int i) {
			return getRuleContext(Gpio_declarationContext.class,i);
		}
		public List<Array_declarationContext> array_declaration() {
			return getRuleContexts(Array_declarationContext.class);
		}
		public Array_declarationContext array_declaration(int i) {
			return getRuleContext(Array_declarationContext.class,i);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(72);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(68);
						assignment();
						}
						break;
					case 2:
						{
						setState(69);
						gpio_declaration();
						}
						break;
					case 3:
						{
						setState(70);
						array_declaration();
						}
						break;
					case 4:
						{
						setState(71);
						function_declaration();
						}
						break;
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(77);
			main_function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_functionContext extends ParserRuleContext {
		public TerminalNode FUNCTION_DEC() { return getToken(fodcatParser.FUNCTION_DEC, 0); }
		public TerminalNode MAIN_NAME() { return getToken(fodcatParser.MAIN_NAME, 0); }
		public TerminalNode END() { return getToken(fodcatParser.END, 0); }
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterMain_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitMain_function(this);
		}
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(FUNCTION_DEC);
			setState(80);
			match(MAIN_NAME);
			setState(81);
			match(T__0);
			setState(82);
			match(T__1);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << REPEAT) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << PRINT) | (1L << SLEEP) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(83);
				command();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public TerminalNode END() { return getToken(fodcatParser.END, 0); }
		public List<ElsestatContext> elsestat() {
			return getRuleContexts(ElsestatContext.class);
		}
		public ElsestatContext elsestat(int i) {
			return getRuleContext(ElsestatContext.class,i);
		}
		public TerminalNode WHILE() { return getToken(fodcatParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(fodcatParser.DO, 0); }
		public Logic_expContext logic_exp() {
			return getRuleContext(Logic_expContext.class,0);
		}
		public GpioContext gpio() {
			return getRuleContext(GpioContext.class,0);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public TerminalNode REPEAT() { return getToken(fodcatParser.REPEAT, 0); }
		public TerminalNode TIMES() { return getToken(fodcatParser.TIMES, 0); }
		public Int_literalContext int_literal() {
			return getRuleContext(Int_literalContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Arithmetic_expContext arithmetic_exp() {
			return getRuleContext(Arithmetic_expContext.class,0);
		}
		public TerminalNode PRINT() { return getToken(fodcatParser.PRINT, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<Print_opContext> print_op() {
			return getRuleContexts(Print_opContext.class);
		}
		public Print_opContext print_op(int i) {
			return getRuleContext(Print_opContext.class,i);
		}
		public TerminalNode RETURN() { return getToken(fodcatParser.RETURN, 0); }
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Flow_expContext flow_exp() {
			return getRuleContext(Flow_expContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Array_declarationContext array_declaration() {
			return getRuleContext(Array_declarationContext.class,0);
		}
		public SleepContext sleep() {
			return getRuleContext(SleepContext.class,0);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitCommand(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_command);
		int _la;
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				ifstat();
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(93); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(92);
						elsestat();
						}
						}
						setState(95); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==ELSE );
					}
				}

				setState(99);
				match(END);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(WHILE);
				setState(102);
				match(T__0);
				setState(105);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(103);
					logic_exp(0);
					}
					break;
				case 2:
					{
					setState(104);
					gpio();
					}
					break;
				}
				setState(107);
				match(T__1);
				setState(108);
				match(DO);
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << REPEAT) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << PRINT) | (1L << SLEEP) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(109);
					command();
					}
					}
					setState(114);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(115);
				match(END);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				match(REPEAT);
				setState(118);
				match(T__0);
				setState(122);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(119);
					int_literal();
					}
					break;
				case 2:
					{
					setState(120);
					identifier();
					}
					break;
				case 3:
					{
					setState(121);
					arithmetic_exp(0);
					}
					break;
				}
				setState(124);
				match(T__1);
				setState(125);
				match(TIMES);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << REPEAT) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << PRINT) | (1L << SLEEP) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(126);
					command();
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(132);
				match(END);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				match(PRINT);
				setState(135);
				match(T__0);
				setState(136);
				expression();
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PLUS) {
					{
					{
					setState(137);
					print_op();
					setState(138);
					expression();
					}
					}
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(145);
				match(T__1);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(147);
				match(RETURN);
				setState(149);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(148);
					expression();
					}
					break;
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(151);
				func_call();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(152);
				flow_exp();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(153);
				assignment();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(154);
				array_declaration();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(155);
				gpio();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(156);
				sleep();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(fodcatParser.IF, 0); }
		public TerminalNode THEN() { return getToken(fodcatParser.THEN, 0); }
		public Logic_expContext logic_exp() {
			return getRuleContext(Logic_expContext.class,0);
		}
		public GpioContext gpio() {
			return getRuleContext(GpioContext.class,0);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public IfstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterIfstat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitIfstat(this);
		}
	}

	public final IfstatContext ifstat() throws RecognitionException {
		IfstatContext _localctx = new IfstatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifstat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(IF);
			setState(160);
			match(T__0);
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(161);
				logic_exp(0);
				}
				break;
			case 2:
				{
				setState(162);
				gpio();
				}
				break;
			}
			setState(165);
			match(T__1);
			setState(166);
			match(THEN);
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << REPEAT) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << PRINT) | (1L << SLEEP) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(167);
				command();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsestatContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(fodcatParser.ELSE, 0); }
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public ElsestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsestat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterElsestat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitElsestat(this);
		}
	}

	public final ElsestatContext elsestat() throws RecognitionException {
		ElsestatContext _localctx = new ElsestatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elsestat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(173);
			match(ELSE);
			setState(181);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(174);
				ifstat();
				}
				break;
			case 2:
				{
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHILE) | (1L << REPEAT) | (1L << BREAK) | (1L << CONTINUE) | (1L << IF) | (1L << RETURN) | (1L << PRINT) | (1L << SLEEP) | (1L << IDENTIFIER))) != 0)) {
					{
					{
					setState(175);
					command();
					}
					}
					setState(180);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_callContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Parameters_calledContext parameters_called() {
			return getRuleContext(Parameters_calledContext.class,0);
		}
		public Func_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitFunc_call(this);
		}
	}

	public final Func_callContext func_call() throws RecognitionException {
		Func_callContext _localctx = new Func_callContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func_call);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			identifier();
			setState(184);
			match(T__0);
			setState(185);
			parameters_called();
			setState(186);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Flow_expContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(fodcatParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(fodcatParser.CONTINUE, 0); }
		public Flow_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flow_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterFlow_exp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitFlow_exp(this);
		}
	}

	public final Flow_expContext flow_exp() throws RecognitionException {
		Flow_expContext _localctx = new Flow_expContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_flow_exp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_la = _input.LA(1);
			if ( !(_la==BREAK || _la==CONTINUE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ASSIGN_OP() { return getToken(fodcatParser.ASSIGN_OP, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public Array_callContext array_call() {
			return getRuleContext(Array_callContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof fodcatListener ) ((fodcatListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(190);
				identifier();
				}
				break;
			case 2:
				{
				setState(191);
				array_call();
				}
				break;
			}
			setState(194);
			match(ASSIGN_OP);
			setState(195);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
